# ai-log-analyzer

./: .gitignore  README.md
backend/: .env  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: datasets.py  detect.py  explain.py  models.py
backend/app/core/: config.py  database.py  logging.py
backend/app/llm_engine/: ollama_client.py  prompt_builder.py
backend/app/ml_engine/: detector.py  feature_engineering.py  trainer.py
backend/app/models/: dataset.py  detection_run.py  ml_model.py
backend/app/rag_engine/: embedder.py  knowledge_base.py
backend/app/services/: dataset_service.py  detection_service.py  llm_service.py  ml_service.py
backend/chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: axiosClient.ts  datasetApi.ts  detectionApi.ts  insightsApi.ts  modelApi.ts
frontend/src/components/layout/: DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/context/: AnalysisSessionContext.tsx
frontend/src/hooks/: useDatasets.ts  useDetection.ts  useInsights.ts  useModels.ts
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Datasets/: DatasetsPage.tsx
frontend/src/pages/Detection/: DetectionPage.tsx
frontend/src/pages/Insights/: InsightsPage.tsx
frontend/src/pages/Models/: ModelsPage.tsx
frontend/src/routes/: AppRouter.tsx
frontend/src/types/: dataset.ts  detection.ts  insights.ts  model.ts
frontend/src/utils/: format.ts
